<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="xies.academy.hebuni.com.cateringordersystem.fragment.UserFragment">

    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/head_padding_top"
        android:visibility="gone">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/img_description"
            android:src="@mipmap/default_user_img" />

        <LinearLayout
            android:id="@+id/log_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_image"
            android:layout_marginLeft="@dimen/margin_left_right"
            android:layout_marginRight="@dimen/margin_left_right"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/corners"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                style="@style/edit_text_comm"
                android:background="@android:color/transparent"
                android:hint="@string/username"
                android:inputType="text"
                android:lines="1"
                android:text="" />

            <View style="@style/line_view" />

            <EditText
                android:id="@+id/password"
                style="@style/edit_text_comm"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1"
                android:text="" />
        </LinearLayout>

        <Button
            android:id="@+id/login"
            style="@style/button_comm"
            android:layout_below="@id/log_input"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/loginButton"
            android:text="@string/login"
            android:textStyle="bold" />

        <Button
            android:id="@+id/register"
            style="@style/text_comm"
            android:layout_below="@id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:padding="30dp"
            android:text="@string/register"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_logged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            style="@style/layout_comm_horizontal"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/edit_text_padding">

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@mipmap/user_def"
                android:contentDescription="@string/img_description" />

            <TextView
                android:id="@+id/login_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/iv_user"
                android:paddingEnd="@dimen/margin_left_right"
                android:paddingStart="@dimen/margin_left_right"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/large_text" />

            <Button
                android:id="@+id/logout"
                style="@style/button_small"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@color/loginButton"
                android:text="@string/logout" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_orders"
            style="@style/layout_comm_horizontal"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/tv_order"
                android:layout_width="150dp"
                android:layout_height="72dp"
                android:layout_centerVertical="true"
                android:drawableStart="@mipmap/order_def"
                android:gravity="center_vertical"
                android:text="@string/orders"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/tv_order"
                android:drawableEnd="@mipmap/arrow_right_ico"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:textColor="@color/black" />
        </RelativeLayout>

        <EditText
            android:id="@+id/et_adv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/edit_bg_selector"
            android:cursorVisible="true"
            android:gravity="start"
            android:hint="@string/suggestions"
            android:paddingEnd="@dimen/edit_text_padding"
            android:paddingStart="@dimen/edit_text_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/submit"
            style="@style/button_comm"
            android:layout_margin="0dp"
            android:background="@color/loginButton"
            android:text="@string/submit"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:gravity="center"
            android:padding="@dimen/edit_text_padding"
            android:text=""
            android:textSize="@dimen/text_size" />
    </LinearLayout>

</FrameLayout>
