<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <xies.academy.hebuni.com.cateringordersystem.util.PubTitle
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="@dimen/edit_text_padding">

        <TextView
            android:id="@+id/tv_order_desc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:text="@string/order"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_order_no"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_left_right"
            android:layout_toEndOf="@id/tv_order_desc"
            android:gravity="start|center_vertical"
            android:text=""
            android:textColor="@color/white"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_order_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="@dimen/edit_text_padding"
        android:text=""
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/et_order_review"
        style="@style/edit_text_comm"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="start"
        android:hint="@string/img_description" />

    <Button
        android:id="@+id/btn_submit"
        style="@style/button_comm"
        android:layout_margin="0dp"
        android:background="@color/loginButton"
        android:text="@string/submit"
        android:textStyle="bold" />

</LinearLayout>